--- a/docs/v2.0版本思路.md
+++ b/docs/v2.0版本思路.md
@@ -35,6 +35,12 @@
 
 ### 2. 项目生成
 
+后端读取项目文件思路：
+
+1. 在上传时就读取
+2. 在上传后通过定时任务将zip文件转化为一个大型的json文件
+3. 在生成代码的时候解析zip文件形成json文件。
+
 项目模板导入优化：
 
 - [ ] 基于压缩包的代码导入
